--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "vmwhoami <vmwhoami@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0"
   }
